--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8" />
     <base href="/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-..." crossorigin="anonymous"> -->
   </head>
   <body>
     <app-root>Loading...</app-root>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-..." crossorigin="anonymous"></script> -->
+    <!--  "bootstrap": "^5.3.3", -->
   </body>
 </html>
